--- a/index.html
+++ b/index.html
@@ -135,9 +135,9 @@
               <br>
               <a href="https://yaseminacar.de/">Yasemin Acar</a>
               <br>
-              External Collaborator<br>
-              <em>Assist. Prof./Co-Lab Director<br>
-                (starting Oct, 2021)</em>
+              Assist. Prof.
+              <br>
+              <em>Co-Lab Director</em>
               <br>
             </div>
             <div class="col-sm text-center">
@@ -297,18 +297,18 @@
                 </p>
                 <ul>
                     <li><strong>Security and Privacy Reading Group</strong>
-                        <div class="badge badge-success">public</div>
+                        <div class="badge badge-success">public</div> <div class="badge badge-warning"><em>virtual</em></div>
                         <p>
                             The <a href="https://gwusec.seas.gwu.edu/reading-group">Security and Privacy Reading Group</a> is a weekly <strong>public</strong> event where we discuss a recent research article related to security and privacy.
                             A discussion lead will prepare a short presentation that will kick off the discussion.
                             The reading group is also "brown bag lunch" and has a social component.
                         </p>
                         <p>
-                            Wednesday 1130-1230 (Virtual) (email Prof. Aviv to be added to the mailing list)
+                            Thursday 1130-1230 (Virtual) (email Prof. Aviv/Acar to be added to the mailing list)
                         </p>
                     </li>
                     <li><strong>Lab Scrum Meetings</strong>
-                        <div class="badge badge-danger">by invitation</div>
+                        <div class="badge badge-danger">by invitation</div> <div class="badge badge-warning"><em>virtual</em></div>
                         <p>
                             We have regular, scrum-like lab meetings where status updates on all projects are quickly presented.
                             Non collaborators are allowed to attend, by invitation.
@@ -318,7 +318,7 @@
                         </p>
                     </li>
                     <li><strong>Tea Time</strong>
-                        <div class="badge badge-success">public</div>
+                        <div class="badge badge-success"><strike>public</strike></div> <div class="badge badge-warning"><strike><em>in-person</em></strike></div> <em class="badge badge-danger">On hiatus Spring 2022 due to COVID</em>
                         <p>
                             We meet informally to have tea or coffee.
                         </p>
