--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
         <div class="container news">
           <h4>News</h4>
           <ul>
+            <li><span class="badge badge-secondary">Dec 2021</span>Jaron Mink, Amanda Rose Yuile, Uma Pal, Adam J. Aviv and Adam Bates have a new paper accepted at CHI'22</li>
             <li><span class="badge badge-secondary">Oct 2021</span> Philipp Markert, Daniel V. Bailey, Maximilian Golla, Markus Dürmuth, and Adam J. Aviv have a new journal article appearing at ACM TOPS </li>
             <li><span class="badge badge-secondary">Sep 2021</span> David G. Balash, Xiaoyuan Wu, Miles Grant, Irwin Reyes, and Adam J. Aviv have a new paper at USENIX Security'22</li>
             <li><span class="badge badge-secondary">June 2021</span> Collins Munyendo, Miles Grant, Philipp Markert, Timothy J. Forman, and Adam J. Aviv have a new paper at SOUPS'21</li>
@@ -378,7 +379,9 @@
                 <a id="pubs"></a>
                 <h2>Publications </h2>
                 <ul class="list-group">
-                  
+                  <li class="list-group-item" aria-disabled="true">
+                  Jaron Mink, Amanda Rose Yuile, Uma Pal, Adam J. Aviv and Adam Bates. Users can Deduce Sensitive Locations Protected by Privacy Zones on Fitness Tracking Apps. ACM CHI Conference on Human Factors in Computing Systems (CHI'22). May, 2022
+                  </li>
                   <li class="list-group-item" aria-disabled="true">
                   Philipp Markert, Daniel V. Bailey, Maximilian Golla, Markus Dürmuth, and Adam J. Aviv. <a href="https://dl.acm.org/doi/10.1145/3473040">On the Security of Smartphone Unlock PINs</a>. ACM Transactions on Privacy and Security (TOPS). Vol. 24 (4). ACM. Sep 2021.
                   </li>
