--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                             The reading group is also "brown bag lunch" and has a social component.
                         </p>
                         <p>
-                            Thursday 1130-1230 (Virtual) (email Prof. Aviv/Acar to be added to the mailing list)
+                            Thursday 1130am-1230pm (Virtual) (email Prof. Aviv/Acar to be added to the mailing list)
                         </p>
                     </li>
                     <li><strong>Lab Scrum Meetings</strong>
@@ -315,16 +315,16 @@
                             Non collaborators are allowed to attend, by invitation.
                         </p>
                         <p>
-                            Friday 400-415 (Virtual)
+                            Friday 400pm-415pm (Virtual)
                         </p>
                     </li>
                     <li><strong>Tea Time</strong>
-                        <div class="badge badge-success"><strike>public</strike></div> <div class="badge badge-warning"><strike><em>in-person</em></strike></div> <em class="badge badge-danger">On hiatus Spring 2022 due to COVID</em>
+                        <div class="badge badge-success">public</div> <div class="badge badge-warning"><em>in-person</em></div>
                         <p>
                             We meet informally to have tea or coffee.
                         </p>
                         <p>
-                            Monday 330-430 -- GWUSEC Lab in SEH
+                            Monday 200pm-300pm -- GWUSEC Lab in SEH
                         </p>
                     </li>
                 </ul>
@@ -340,7 +340,7 @@
                     <li><strong>Prospective PhD Students</strong>
                         <p>
                             We are always looking for new PhD students, and if you are applying to grad school and interested in usable security and privacy, please consider GW!
-                            Please email Adam Aviv with any inquiries, but be mindful, we may not follow up with everyone.
+                            Please email Profs. Adam Aviv and Yasemin Acar with any inquiries, but be mindful, we may not follow up with everyone.
                             Obvious form emails sent en mass will not receive a response, so please be sure to write a personal email that notes some background about yourself and what kinds of projects you're interested in researching.
                             <em>Do not attach a CV or resume</em>: just let us know who you are and why you want to join the lab.
                         </p>
@@ -351,7 +351,7 @@
                             Participating in reading group or social events are the fastest way to learn what is happening in the lab, as well as earn an invite to the lab meeting.
                         </p>
                         <p>
-                            You may also email Adam Aviv if you are interested in research projects, but you will likely be directed to attend a public event.
+                            You may also email Profs Adam Aviv and Yasemin Acar if you are interested in research projects, but you will likely be directed to attend a public event.
                             If you cannot attend a public event, we can arrange other times to meet.
                         </p>
                     </li>
@@ -428,7 +428,7 @@
                     </li>
 
                   <li class="list-group-item" aria-disabled="true">
-                    Rahel A. Fainchtein, Adam A. Aviv, Micah Sherr, Stephen Ribaudo, and Armaan Khullar. Holes in the Geofence: Privacy Vulnerabilities in “Smart” DNS Services. In the proceedings of the Privacy Enhancing Technology Symposium (PoPets'21). Jul. 2021. (<a href="https://petsymposium.org/2021/files/papers/issue2/popets-2021-0022.pdf">pdf</a>) (<a href="https://www.youtube.com/watch?v=RjsVYGbOg3U">video</a>)
+                    Rahel A. Fainchtein, Adam J. Aviv, Micah Sherr, Stephen Ribaudo, and Armaan Khullar. Holes in the Geofence: Privacy Vulnerabilities in “Smart” DNS Services. In the proceedings of the Privacy Enhancing Technology Symposium (PoPets'21). Jul. 2021. (<a href="https://petsymposium.org/2021/files/papers/issue2/popets-2021-0022.pdf">pdf</a>) (<a href="https://www.youtube.com/watch?v=RjsVYGbOg3U">video</a>)
                     </li>
                   
                   <li class="list-group-item" aria-disabled="true">
