Fix Dominik's entry
Fixed Dominik's name on the webpage and updated the role.

--- a/index.html
+++ b/index.html
@@ -272,11 +272,11 @@
               <em>Postdoc in abstentia</em>
             </div>
             <div class="col-sm text-center">
-              <img src="imgs/people/000_placeholder.jpg" width="200" alt="Dominic Wermke" class="img-thumbnail">
+              <img src="imgs/people/000_placeholder.jpg" width="200" alt="Dominik Wermke" class="img-thumbnail">
               <br>
-              Dominic Wermke
+              Dominik Wermke
               <br>
-              External Collaborator
+              Visiting Scholar
               <br>
             </div>
 
