adding new paper

--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
         <div class="container news">
           <h4>News</h4>
           <ul>
+            <li><span class="badge badge-secondary">Feb 2022</span>Collins W. Munyendo, Philipp Markert, Alexandra Nisenoff, Miles Grant, Elena Korkes, Blase Ur, and Adam J. Aviv have a new paper accepted at USENIX Sec'22</li>
             <li><span class="badge badge-secondary">Dec 2021</span> Jaron Mink, Amanda Rose Yuile, Uma Pal, Adam J. Aviv and Adam Bates have a new paper accepted at CHI'22</li>
             <li><span class="badge badge-secondary">Nov 2021</span> Jan Jancar, Marcel Fourne, Daniel De Almeida Braga, Mohamed Sabt, Peter Schwabe, Gilles Barth, Pierre-Alain Fouque, Yasemin Acar have a new paper accepted at S&P'22 (Oakland'22)</li>
             <li><span class="badge badge-secondary">Oct 2021</span> Philipp Markert, Daniel V. Bailey, Maximilian Golla, Markus Dürmuth, and Adam J. Aviv have a new journal article appearing at ACM TOPS </li>
@@ -140,7 +141,7 @@
               <br>
               <a href="https://yaseminacar.de/">Yasemin Acar</a>
               <br>
-              Assist. Prof.
+              Asst. Prof.
               <br>
               <em>Co-Lab Director</em>
               <br>
@@ -411,6 +412,9 @@
                 <a id="pubs"></a>
                 <h2>Publications </h2>
                 <ul class="list-group">
+                  <li class="list-group-item" aria-disabled="true">
+                    Collins W. Munyendo, Philipp Markert, Alexandra Nisenoff, Miles Grant, Elena Korkes, Blase Ur, and Adam J. Aviv. "The Same PIN, Just Longer": On the (In)Security of Upgrading PINs from 4 to 6 Digits. USENIX Security Symposium (Sec'22). Aug, 2022.
+                  </li>
 
                   <li class="list-group-item" aria-disabled="true">
                     Christian Stransky, Oliver Wiese, Volker Roth, Yasemin Acar, Sascha Fahl, 27 Years and 81 Million Opportunities Later: Investigating  the Use of Email Encryption for an Entire University. Proceedings of the 2022 IEEE Symposium on Security and Privacy - Oakland’22
