--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
         <div class="col-sm">
           <img src="imgs/icons/home.svg" alt="House icon"><br>
-          SEH 4390 (Bubble Lab through SEH4100 doors)
+          SEH 4390 <br> (Bubble Lab through SEH4100 doors)
         </div>
         <div class="col-sm">
           <a href="https://github.com/gwusec">
