--- a/index.html
+++ b/index.html
@@ -81,7 +81,14 @@
         <div class="container news">
           <h4>News</h4>
           <ul>
-            <li><span class="badge badge-secondary">Feb 2022</span>Collins W. Munyendo, Philipp Markert, Alexandra Nisenoff, Miles Grant, Elena Korkes, Blase Ur, and Adam J. Aviv have a new paper accepted at USENIX Sec'22</li>
+            <li><span class="badge badge-secondary">Apr 2022</span> Collins W. Munyendo, Yasemin Acar, and Adam J. Aviv have a new paper accepted at IEEE S&P'22 (Oakland'22).</li>
+            <li><span class="badge badge-secondary">Apr 2022</span> Jan Jancar, Marcel Fourné, Daniel De Almeida Braga, Mohamed Sabt, Peter Schwabe, Gilles Barthe, Pierre-Alain Fouque, and Yasemin Acar have a new paper accepted at IEEE S&P'22 (Oakland'22).</li>
+            <li><span class="badge badge-secondary">Apr 2022</span> Dominik Wermke, Noah Wöhler, Jan H. Klemmer, Marcel Fourné, Yasemin Acar and Sascha Fahl have a new paper accepted at IEEE S&P'22 (Oakland'22).</li>
+            <li><span class="badge badge-secondary">Feb 2022</span> Collins W. Munyendo, Philipp Markert, Alexandra Nisenoff, Miles Grant, Elena Korkes, Blase Ur, and Adam J. Aviv have a new paper accepted at USENIX Sec'22</li>
+
+            <li> <a href='javascript:void(0)' onclick="$('.2021-news').toggle('slow')">2021 News</a>  (click to reveal)</li>
+            <div class="2021-news"  style="display:none;">
+              <ul>
             <li><span class="badge badge-secondary">Dec 2021</span> Jaron Mink, Amanda Rose Yuile, Uma Pal, Adam J. Aviv and Adam Bates have a new paper accepted at CHI'22</li>
             <li><span class="badge badge-secondary">Nov 2021</span> Jan Jancar, Marcel Fourne, Daniel De Almeida Braga, Mohamed Sabt, Peter Schwabe, Gilles Barth, Pierre-Alain Fouque, Yasemin Acar have a new paper accepted at S&P'22 (Oakland'22)</li>
             <li><span class="badge badge-secondary">Oct 2021</span> Philipp Markert, Daniel V. Bailey, Maximilian Golla, Markus Dürmuth, and Adam J. Aviv have a new journal article appearing at ACM TOPS </li>
@@ -98,6 +105,8 @@
             <li><span class="badge badge-secondary">June 2021</span> Florian Farke, David Balash, Maximilian Golla, Markus, Markus Dürmuth, and Adam J. Aviv have a new paper accepted at USENIX Sec'21 </li>
             <li><span class="badge badge-secondary">Apr 2021</span> Peter Mayer, Yixin Zou, Florian Schaub, and Adam J. Aviv have a new paper accepted at USENIX Sec'21 </li>
             <li><span class="badge badge-secondary">Feb 2021</span> Ian Martiny, Gabriel Kaptchuk, Adam J. Aviv, Daniel S. Roche, and Eric Wustrow have a new paper accepted at NDSS'21 </li>
+              </ul>
+            </div>
             <li> <a href='javascript:void(0)' onclick="$('.2020-news').toggle('slow')">2020 News</a>  (click to reveal)</li>
             <div class="2020-news"  style="display:none;">
               <ul>
@@ -412,6 +421,24 @@
                 <a id="pubs"></a>
                 <h2>Publications </h2>
                 <ul class="list-group">
+
+                  <li class="list-group-item" aria-disabled="true">
+                  Collins Munyendo, Yasemin Acar, and Adam J. Aviv. Desperate Times Call for Desperate Measures:" User Concerns with Mobile Loan Apps in Kenya. Proceedings of the 2022 IEEE Symposium on Security and Privacy - Oakland’22
+                  </li>
+
+                  <li class="list-group-item" aria-disabled="true">
+                  Christian Stransky, Oliver Wiese, Volker Roth, Yasemin Acar and Sascha Fahl. 27 Years and 81 Million Opportunities Later: Investigating the Use of Email Encryption for an Entire University. Proceedings of the 2022 IEEE Symposium on Security and Privacy - Oakland’22 (<a href="https://publications.teamusec.de/2022-oakland-email/pdf/2022_oakland_email_stransky_preprint.pdf">preprint</a>)
+                  </li>
+
+                  <li class="list-group-item" aria-disabled="true">
+                    Marco Gutfleisch, Jan Klemmer, Niklas Busch, Yasemin Acar, Angela Sasse, Sascha Fahl. How Does Usable Security (Not) End Up in Software Products? Results From a Qualitative Interview Study.  Proceedings of the 2022 IEEE Symposium on Security and Privacy - Oakland’22 (<a href="https://publications.teamusec.de/2022-oakland-usec-in-sdps/pdf/conf-oakland-gutfleisch22-preprint.pdf">preprint</a>)
+                  </li>
+
+                  <li class="list-group-item" aria-disabled="true">
+                    Jan Jancar, Marcel Fourné, Daniel De Almeida Braga, Mohamed Sabt, Peter Schwabe, Gilles Barthe, Pierre-Alain Fouque, Yasemin Acar. “They’re not that hard to mitigate”: What Cryptographic Library Developers Think About Timing Attacks. Proceedings of the 2022 IEEE Symposium on Security and Privacy - Oakland’22 (<a href="https://crocs.fi.muni.cz/_media/publications/pdf/2022-sp-jancar.pdf">preprint</a>)
+                  </li>
+                  
+                                    
                   <li class="list-group-item" aria-disabled="true">
                     Collins W. Munyendo, Philipp Markert, Alexandra Nisenoff, Miles Grant, Elena Korkes, Blase Ur, and Adam J. Aviv. "The Same PIN, Just Longer": On the (In)Security of Upgrading PINs from 4 to 6 Digits. USENIX Security Symposium (Sec'22). Aug, 2022.
                   </li>
