--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <li><span class="badge badge-secondary">Apr 2022</span> Jan Jancar, Marcel Fourné, Daniel De Almeida Braga, Mohamed Sabt, Peter Schwabe, Gilles Barthe, Pierre-Alain Fouque, and Yasemin Acar have a new paper accepted at IEEE S&P'22 (Oakland'22).</li>
             <li><span class="badge badge-secondary">Apr 2022</span> Dominik Wermke, Noah Wöhler, Jan H. Klemmer, Marcel Fourné, Yasemin Acar and Sascha Fahl have a new paper accepted at IEEE S&P'22 (Oakland'22).</li>
             <li><span class="badge badge-secondary">Feb 2022</span> Collins W. Munyendo, Philipp Markert, Alexandra Nisenoff, Miles Grant, Elena Korkes, Blase Ur, and Adam J. Aviv have a new paper accepted at USENIX Sec'22</li>
-
+            <li><span class="badge badge-secondary">Feb 2022</span>Harjot Kaur, Sabrina Amft, Daniel Votipka, Yasemin Acar and Sascha Fahl have a new paper accepted at USENIX Sec'22</li>
             <li> <a href='javascript:void(0)' onclick="$('.2021-news').toggle('slow')">2021 News</a>  (click to reveal)</li>
             <div class="2021-news"  style="display:none;">
               <ul>
@@ -421,7 +421,7 @@
                 <a id="pubs"></a>
                 <h2>Publications </h2>
                 <ul class="list-group">
-
+                  
                   <li class="list-group-item" aria-disabled="true">
                   Collins Munyendo, Yasemin Acar, and Adam J. Aviv. Desperate Times Call for Desperate Measures:" User Concerns with Mobile Loan Apps in Kenya. Proceedings of the 2022 IEEE Symposium on Security and Privacy - Oakland’22
                   </li>
@@ -441,6 +441,10 @@
                                     
                   <li class="list-group-item" aria-disabled="true">
                     Collins W. Munyendo, Philipp Markert, Alexandra Nisenoff, Miles Grant, Elena Korkes, Blase Ur, and Adam J. Aviv. "The Same PIN, Just Longer": On the (In)Security of Upgrading PINs from 4 to 6 Digits. USENIX Security Symposium (Sec'22). Aug, 2022.
+                  </li>
+
+                  <li class="list-group-item" aria-disabled="true">
+                    Harjot Kaur, Sabrina Amft, Daniel Votipka, Yasemin Acar and Sascha Fahl. Where to Recruit for Security Development Studies from: Comparing Six Software Developer Samples. USENIX Security Symposium (Sec'22). Aug, 2022.
                   </li>
 
                   <li class="list-group-item" aria-disabled="true">
