adding a missing pub

--- a/index.html
+++ b/index.html
@@ -84,6 +84,8 @@
             <li><span class="badge badge-secondary">Apr 2022</span> Collins W. Munyendo, Yasemin Acar, and Adam J. Aviv have a new paper accepted at IEEE S&P'22 (Oakland'22).</li>
             <li><span class="badge badge-secondary">Apr 2022</span> Jan Jancar, Marcel Fourné, Daniel De Almeida Braga, Mohamed Sabt, Peter Schwabe, Gilles Barthe, Pierre-Alain Fouque, and Yasemin Acar have a new paper accepted at IEEE S&P'22 (Oakland'22).</li>
             <li><span class="badge badge-secondary">Apr 2022</span> Dominik Wermke, Noah Wöhler, Jan H. Klemmer, Marcel Fourné, Yasemin Acar and Sascha Fahl have a new paper accepted at IEEE S&P'22 (Oakland'22).</li>
+            <li><span class="badge badge-secondary">Feb 2022</span> Hirak Ray, Ravi Kuber, and Adam J. Aviv have a new paper accepted at the Web for All Conference '22</li>
+
             <li><span class="badge badge-secondary">Feb 2022</span> Collins W. Munyendo, Philipp Markert, Alexandra Nisenoff, Miles Grant, Elena Korkes, Blase Ur, and Adam J. Aviv have a new paper accepted at USENIX Sec'22</li>
             <li><span class="badge badge-secondary">Feb 2022</span>Harjot Kaur, Sabrina Amft, Daniel Votipka, Yasemin Acar and Sascha Fahl have a new paper accepted at USENIX Sec'22</li>
             <li> <a href='javascript:void(0)' onclick="$('.2021-news').toggle('slow')">2021 News</a>  (click to reveal)</li>
@@ -462,6 +464,13 @@
                   <li class="list-group-item" aria-disabled="true">
                   Jaron Mink, Amanda Rose Yuile, Uma Pal, Adam J. Aviv and Adam Bates. Users can Deduce Sensitive Locations Protected by Privacy Zones on Fitness Tracking Apps. ACM CHI Conference on Human Factors in Computing Systems (CHI'22). May, 2022
                   </li>
+
+
+                  <li class="list-group-item" aria-disabled="true">
+                  Hirak Ray, Ravi Kuber, and Adam J. Aviv. Investigating Older Adults’ Adoption and Usage of Online Conferencing Tools During COVID-19.  19th International Web for All Conference (W4A '22). April, 2022.
+                  </li>
+
+
                   <li class="list-group-item" aria-disabled="true">
                   Philipp Markert, Daniel V. Bailey, Maximilian Golla, Markus Dürmuth, and Adam J. Aviv. <a href="https://dl.acm.org/doi/10.1145/3473040">On the Security of Smartphone Unlock PINs</a>. ACM Transactions on Privacy and Security (TOPS). Vol. 24 (4). ACM. Sep 2021.
                   </li>
