daniel fisher website and photo

--- a/index.html
+++ b/index.html
@@ -224,6 +224,15 @@
               Undergraduate
               <br>
             </div>
+
+            <div class="col-sm text-center">
+              <img src="imgs/people/017_daniel.jpg" width="200" alt="Daniel Fisher" class="img-thumbnail">
+              <br>
+              Daniel Fisher
+              <br>
+              Undergraduate
+              <br>
+            </div>
           </div>
           <div class="row mt-2 mb-4">
             <div class="col-sm text-center">
