--- a/index.html
+++ b/index.html
@@ -223,6 +223,16 @@
               <br>
               Undergraduate
               <br>
+            </div> 
+          </div>
+          <div class="row mt-2 mb-4">
+            <div class="col-sm text-center">
+              <img src="imgs/people/017_marlee.jpg" width="200" alt="Marlee Alvino" class="img-thumbnail">
+              <br>
+              Marlee Alvino
+              <br>
+              Undergraduate
+              <br>
             </div>
           </div>
           <div class="row mt-2 mb-4">
