tea time is not currently active

--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
                             We meet informally to have tea or coffee.
                         </p>
                         <p>
-                            Monday 200pm-300pm -- GWUSEC Lab in SEH
+                          <strike>Monday 200pm-300pm -- GWUSEC Lab in SEH</strike> <span class="badge badge-warning">will return Fall'22</span>
                         </p>
                     </li>
                 </ul>
