updating some links

--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
                 <ul class="list-group">
 
                   <li class="list-group-item" aria-disabled="true">
-                    Peter Mayer, Collins Munyendo, Michelle L. Mazurek, and Adam J. Aviv. Why Users (Don't) Use Password Managers at a Large Educational Institution. USENIX Security Symposium (Sec'22). Aug, 2022.
+                    Peter Mayer, Collins Munyendo, Michelle L. Mazurek, and Adam J. Aviv. <a href="https://www.usenix.org/conference/usenixsecurity22/presentation/mayer">Why Users (Don't) Use Password Managers at a Large Educational Institution</a>. USENIX Security Symposium (Sec'22). Aug, 2022.
                   </li>
 
                   <li class="list-group-item" aria-disabled="true">
@@ -452,7 +452,7 @@
                   </li>
 
                   <li class="list-group-item" aria-disabled="true">
-                    Harjot Kaur, Sabrina Amft, Daniel Votipka, Yasemin Acar and Sascha Fahl. Where to Recruit for Security Development Studies from: Comparing Six Software Developer Samples. USENIX Security Symposium (Sec'22). Aug, 2022.
+                    Harjot Kaur, Sabrina Amft, Daniel Votipka, Yasemin Acar and Sascha Fahl. Where to Recruit for Security Development Studies from: Comparing Six Software Developer Samples. USENIX Security Symposium (Sec'22). Aug, 2022. 
                   </li>
 
                   <li class="list-group-item" aria-disabled="true">
@@ -482,7 +482,7 @@
                   </li>
 
                   <li class="list-group-item" aria-disabled="true">
-                    David G. Balash, Xiaoyuan (Owen) Wu, Miles Grant, Irwin Reyes, and Adam J. Aviv. Security and Privacy Perceptions of Third-Party Application Access for Google Accounts. 31st USENIX Security Symposium (USENIX Security 22). Aug 2022.
+                    David G. Balash, Xiaoyuan (Owen) Wu, Miles Grant, Irwin Reyes, and Adam J. Aviv. <a href="https://www.usenix.org/conference/usenixsecurity22/presentation/balash">Security and Privacy Perceptions of Third-Party Application Access for Google Accounts</a>. 31st USENIX Security Symposium (USENIX Security 22). Aug 2022.
                   </li>
 
                   <li class="list-group-item" aria-disabled="true">
