adding max width

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <div class="container about content">
         <h2>GWUSEC Lab</h2>
         <center>
-          <img src="imgs/GWUSEC_group_photo_2021.jpeg" width="700" alt="GWUSEC Lab Group Photo August 2021">
+          <img src="imgs/GWUSEC_group_photo_2021.jpeg" class="img-fluid" style="max-width:80%" alt="GWUSEC Lab Group Photo August 2021">
         </center>
 
         <p>
