fixing event times

--- a/index.html
+++ b/index.html
@@ -395,18 +395,21 @@
                 </p>
                 <ul>
                     <li><strong>Security and Privacy Reading Group</strong>
-                        <div class="badge badge-success">public</div> <div class="badge badge-warning"><em>virtual</em></div>
+                        <div class="badge bg-success">public</div> <div class="badge bg-warning"><em>virtual</em></div>
                         <p>
                             The <a href="https://gwusec.seas.gwu.edu/reading-group">Security and Privacy Reading Group</a> is a weekly <strong>public</strong> event where we discuss a recent research article related to security and privacy.
                             A discussion lead will prepare a short presentation that will kick off the discussion.
                             The reading group is also "brown bag lunch" and has a social component.
                         </p>
-                        <p>
-                            Thursday 1130am-1230pm (Virtual) (email Prof. Aviv/Acar to be added to the mailing list)
+                      <p>
+                        <ul>
+                          <li><span class="badge bg-danger">Fall'22</span> Wednesday 1200pm-100pm (email Prof. Aviv/Acar to be added to the mailing list) </li>
+                        </ul>
                         </p>
                     </li>
+                    <!--
                     <li><strong>Lab Scrum Meetings</strong>
-                        <div class="badge badge-danger">by invitation</div> <div class="badge badge-warning"><em>virtual</em></div>
+                        <div class="badge bg-danger">by invitation</div> <div class="badge bg-warning"><em>virtual</em></div>
                         <p>
                             We have regular, scrum-like lab meetings where status updates on all projects are quickly presented.
                             Non collaborators are allowed to attend, by invitation.
@@ -415,13 +418,17 @@
                             Friday 400pm-415pm (Virtual)
                         </p>
                     </li>
+                    -->
                     <li><strong>Tea Time</strong>
-                        <div class="badge badge-success">public</div> <div class="badge badge-warning"><em>in-person</em></div>
+                        <div class="badge bg-success">public</div> <div class="badge bg-warning"><em>in-person</em></div>
                         <p>
                             We meet informally to have tea or coffee.
                         </p>
-                        <p>
-                          <strike>Monday 200pm-300pm -- GWUSEC Lab in SEH</strike> <span class="badge badge-warning">will return Fall'22</span>
+                      <p>
+                        <ul>
+                          <li><span class="badge bg-danger">Fall'22</span> Tuesday 130pm-300pm -- GWUSEC Lab in SEH (Prof. Aviv will be at this one)</li>
+                          <li><span class="badge bg-danger">Fall'22</span> Wednesday 130pm-300pm -- GWUSEC Lab in SEH</li>
+                        </ul>
                         </p>
                     </li>
                 </ul>
