--- a/index.html
+++ b/index.html
@@ -353,6 +353,15 @@
               Undergraduate
               <br>
             </div>
+
+            <div class="col-sm text-center">
+              <img src="imgs/people/020_kayla.jpg" width="200" height="500" alt="Kayla Berne" class="img-thumbnail">
+              <br>
+              Kayla Berne
+              <br>
+              Undergraduate
+              <br>
+            </div>
           </div>
 
           <div class="row mt-2 mb-4">
