--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
             </div>
 
             <div class="col-sm text-center">
-              <img src="imgs/people/020_kayla.jpg" width="200" height="500" alt="Kayla Berne" class="img-thumbnail">
+              <img src="imgs/people/020_kayla.jpg" width="200" alt="Kayla Berne" class="img-thumbnail">
               <br>
               Kayla Berne
               <br>
