--- a/index.html
+++ b/index.html
@@ -394,6 +394,14 @@
           </div>
           <div class="row mt-2 mb-4">
             <div class="col-sm text-center">
+              <img src="imgs/people/012_florian.jpg" width="200" alt="Florian Farke" class="img-thumbnail">
+              <br>
+              Florian Farke
+              <br>
+              External Collaborator
+              <br>
+            </div>
+            <div class="col-sm text-center">
               <img src="imgs/people/009_peter.jpg" width="200" alt="Peter Mayer" class="img-thumbnail">
               <br>
               Peter Mayer
