updating the pubs

--- a/index.html
+++ b/index.html
@@ -152,6 +152,8 @@
         <div class="container news">
           <h4>News</h4>
           <ul>
+            <li><span class="badge bg-secondary">Oct 2022</span>  Rahel A. Fainchtein, Adam J. Aviv, and Micah Sherr have a new paper accepted at ACSAC'22.</li>
+            <li><span class="badge bg-secondary">Oct 2022</span>Xiaoyuan Wu, Collins W. Munyendo, Eddie Cosic, Genevieve A. Flynn, Olivia Legault, and Adam J. Aviv have a new paper accepted at ACSAC'22.</li>
             <li><span class="badge bg-secondary">May 2022</span> Peter Mayer, Collins W. Munyendo, Michelle L. Mazurek,
               and Adam J. Aviv have a new paper accepted at USENIX Security'22 (Sec'22).</li>
 
@@ -597,6 +599,16 @@
         <h2>Publications </h2>
         <ul class="list-group">
 
+
+          <li class="list-group-item" aria-disabled="true">
+            Rahel A. Fainchtein, Adam J. Aviv, and Micah Sherr. User Perceptions of the Privacy and Usability of Smart DNS. Annual Computer Security Applications Conference. (ACSAC'22). 2022.
+          </li>
+
+          <li class="list-group-item" aria-disabled="true">
+            Xiaoyuan Wu, Collins W. Munyendo, Eddie Cosic, Genevieve A. Flynn, Olivia Legault, and Adam J. Aviv. Xiaoyuan Wu, Collins W. Munyendo, Eddie Cosic, Genevieve A. Flynn, Olivia Legault, and Adam J. Aviv . Annual Computer Security Applications Conference. (ACSAC'22). 2022. 
+          </li>
+
+                    
           <li class="list-group-item" aria-disabled="true">
             Peter Mayer, Collins Munyendo, Michelle L. Mazurek, and Adam J. Aviv. <a
               href="https://www.usenix.org/conference/usenixsecurity22/presentation/mayer">Why Users (Don't) Use
