--- a/index.html
+++ b/index.html
@@ -605,7 +605,7 @@
           </li>
 
           <li class="list-group-item" aria-disabled="true">
-            Xiaoyuan Wu, Collins W. Munyendo, Eddie Cosic, Genevieve A. Flynn, Olivia Legault, and Adam J. Aviv. Xiaoyuan Wu, Collins W. Munyendo, Eddie Cosic, Genevieve A. Flynn, Olivia Legault, and Adam J. Aviv . Annual Computer Security Applications Conference. (ACSAC'22). 2022. 
+            Xiaoyuan Wu, Collins W. Munyendo, Eddie Cosic, Genevieve A. Flynn, Olivia Legault, and Adam J. Aviv . Annual Computer Security Applications Conference. (ACSAC'22). 2022. 
           </li>
 
                     
