--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
           <h4>News</h4>
           <ul>
             <li><span class="badge bg-secondary">Oct 2022</span>  Rahel A. Fainchtein, Adam J. Aviv, and Micah Sherr have a new paper accepted at ACSAC'22.</li>
-            <li><span class="badge bg-secondary">Oct 2022</span>Xiaoyuan Wu, Collins W. Munyendo, Eddie Cosic, Genevieve A. Flynn, Olivia Legault, and Adam J. Aviv have a new paper accepted at ACSAC'22.</li>
+            <li><span class="badge bg-secondary">Oct 2022</span> Xiaoyuan Wu, Collins W. Munyendo, Eddie Cosic, Genevieve A. Flynn, Olivia Legault, and Adam J. Aviv have a new paper accepted at ACSAC'22.</li>
             <li><span class="badge bg-secondary">May 2022</span> Peter Mayer, Collins W. Munyendo, Michelle L. Mazurek,
               and Adam J. Aviv have a new paper accepted at USENIX Security'22 (Sec'22).</li>
 
@@ -272,8 +272,17 @@
               <em>Co-Lab Director</em>
               <br>
             </div>
+
+            <div class="col-sm text-center">
+              <img src="imgs/people/021_lucy.jpg" width="200" alt="Lucy Simko" class="img-thumbnail">
+              <br>
+              <a href="https://yaseminacar.de/">Lucy Simko</a>
+              <br>
+              Research Scientist / Postodoc
+            </div>
           </div>
           <div class="row mt-2 mb-4">
+            
             <div class="col-sm text-center">
               <img src="imgs/people/003_david.jpg" width="200" alt="David Balash" class="img-thumbnail">
               <br>
@@ -347,6 +356,10 @@
               <br>
 
             </div>
+
+          </div>
+
+          <div class="row mt-2 mb-4">
             <div class="col-sm text-center">
               <img src="imgs/people/019_victoria.jpg" width="200" alt="Victoria Hennemann" class="img-thumbnail">
               <br>
@@ -356,9 +369,6 @@
               <br>
             </div>
 
-          </div>
-
-          <div class="row mt-2 mb-4">
             <div class="col-sm text-center">
               <img src="imgs/people/020_kayla.jpg" width="200" alt="Kayla Berne" class="img-thumbnail">
               <br>
@@ -377,6 +387,9 @@
               <br>
             </div>
 
+            
+          </div>
+          <div class="row mt-2 mb-4">
             <div class="col-sm text-center">
               <img src="imgs/people/006_irwin.jpg" width="200" alt="Irwin Reyes" class="img-thumbnail">
               <br>
@@ -386,6 +399,7 @@
               <br>
               <em>"Fixer"</em>
             </div>
+
             <div class="col-sm text-center">
               <img src="imgs/people/007_max.jpg" width="200" alt="Maximllian Golla" class="img-thumbnail">
               <br>
@@ -403,8 +417,7 @@
               External Collaborator
               <br>
             </div>
-          </div>
-          <div class="row mt-2 mb-4">
+
             <div class="col-sm text-center">
               <img src="imgs/people/012_florian.jpg" width="200" alt="Florian Farke" class="img-thumbnail">
               <br>
@@ -427,7 +440,7 @@
               <br>
               Dominik Wermke
               <br>
-              Visiting Scholar
+              External Collaborator
               <br>
             </div>
 
@@ -442,7 +455,7 @@
                 University of Maryland, Baltimore County (UMD)</li>
               <ul>
                 <li>Ravi Kuber</li>
-                <li>Hirak Rey</li>
+                <li>Hirak Rey (Graduate May 2022)</li>
                 <li>Flynn Wolf (Graduated May 2020)</li>
               </ul>
               <li>Security, Privacy, People lab (SP2) at University of Maryland, College Park (UMD)</li>
