--- a/index.html
+++ b/index.html
@@ -276,9 +276,9 @@
             <div class="col-sm text-center">
               <img src="imgs/people/021_lucy.jpg" width="200" alt="Lucy Simko" class="img-thumbnail">
               <br>
-              <a href="https://yaseminacar.de/">Lucy Simko</a>
+              <a href="https://www.lucysimko.com/">Lucy Simko</a>
               <br>
-              Research Scientist / Postodoc
+              Research Scientist / Postdoc
             </div>
           </div>
           <div class="row mt-2 mb-4">
