fixing david's link

--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
             <div class="col-sm text-center">
               <img src="imgs/people/003_david.jpg" width="200" alt="David Balash" class="img-thumbnail">
               <br>
-              <a href="https://github.com/DavidBalash">David Balash</a>
+              <a href="https://davidbalash.github.io/">David Balash</a>
               <br>
               PhD Student
               <br>
