updating the website

--- a/index.html
+++ b/index.html
@@ -62,14 +62,22 @@
           </a>
         </div>
         <div class="col-sm">
-          <img src="imgs/icons/home.svg" alt="House icon"><br>
-          SEH 4390 <br> (Bubble Lab through SEH4100 doors)
+          <a rel="me" href="https://infosec.exchange/@gwusec">
+            <img src="imgs/icons/masto.svg" alt="Mastodon icon" width=24 height=24><br>
+            @gwusec@infosec.exchange
+          </a>
         </div>
         <div class="col-sm">
           <a href="https://github.com/gwusec">
             <img src="imgs/icons/github.svg" alt="GitHub icon"><br>
             github.com/gwusec
           </a>
+        </div>
+      </div>
+      <div class="row mt-3">
+        <div class="col-sm">
+          <img src="imgs/icons/home.svg" alt="House icon"><br>
+          SEH 4390 <br> (Bubble Lab through SEH4100 doors)
         </div>
       </div>
     </div>
@@ -493,25 +501,20 @@
         <a id="activities"></a>
         <h2>Activities</h2>
         <p>
-          The lab has a number of public and private activities.
-          Everyone is welcome at the public events, without invitation.
-          Attending a public event is a great way to meet people in the lab, and potentially getting involved in
+          The lab has a number of public activities that anyone is welcome to join. Attending a public event is a great way to meet people in the lab and potentially getting involved in
           research.
         </p>
         <ul>
-          <li><strong>Security and Privacy Reading Group</strong>
-            <div class="badge bg-success">public</div>
-            <div class="badge bg-warning"><em>virtual</em></div>
+          <li><strong>Lab Meetings</strong>
+            <!-- <div class="badge bg-success">public</div> -->
+            <div class="badge bg-success"><em>virtual</em></div>
             <p>
-              The <a href="https://gwusec.seas.gwu.edu/reading-group">Security and Privacy Reading Group</a> is a weekly
-              <strong>public</strong> event where we discuss a recent research article related to security and privacy.
-              A discussion lead will prepare a short presentation that will kick off the discussion.
-              The reading group is also "brown bag lunch" and has a social component.
+              Lab Meetings are times for practice talks, brain storming, project feedback, pictionary, and more. This is a weekly
+              <strong>public</strong> event. 
             </p>
             <p>
             <ul>
-              <li><span class="badge bg-danger">Fall'22</span> Wednesday 1200pm-100pm (email Prof. Aviv/Acar to be added
-                to the mailing list) </li>
+              <li><span class="badge bg-danger">Spring'23</span> Wednesday 1200pm-100pm (email Prof. Aviv to receive an invite)</li>
             </ul>
             </p>
           </li>
@@ -527,17 +530,15 @@
                         </p>
                     </li>
                     -->
-          <li><strong>Tea Time</strong>
-            <div class="badge bg-success">public</div>
-            <div class="badge bg-warning"><em>in-person</em></div>
+          <li><strong>Brown Bag Lunch</strong>
+            <!-- <div class="badge bg-success">public</div> -->
+            <div class="badge bg-success"><em>in-person</em></div>
             <p>
-              We meet informally to have tea or coffee.
+              We meet informally on Thursdays to eat lunch together and chat, about whatever.
             </p>
             <p>
             <ul>
-              <li><span class="badge bg-danger">Fall'22</span> Tuesday 130pm-300pm -- GWUSEC Lab in SEH (Prof. Aviv will
-                be at this one)</li>
-              <li><span class="badge bg-danger">Fall'22</span> Wednesday 130pm-300pm -- GWUSEC Lab in SEH</li>
+              <li><span class="badge bg-danger">Spring'23</span> Thursday 1200pm-100pm -- GWUSEC Lab in SEH</li>
             </ul>
             </p>
           </li>
