--- a/index.html
+++ b/index.html
@@ -394,8 +394,17 @@
               MS Student
               <br>
             </div>
+            <div class="col-sm text-center">
+              <img src="imgs/people/022_keating.jpg" width="200" alt="Neal Keating" class="img-thumbnail">
+              <br>
+              Neal Keating
+              <br>
+              PhD Student
+              <br>
+            </div>
+               
+          </div>
 
-            
           </div>
           <div class="row mt-2 mb-4">
             <div class="col-sm text-center">
